--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@ input[type="text"] {
 }
 
 button {
+  margin-top: 20px;
   padding: 15px 30px;
   font-size: 18px;
   background-color: #4CAF50;
@@ -66,6 +67,7 @@ button:hover {
   padding: 15px;
   margin: 15px 0;
   background-color: #f9f9f9;
+  text-wrap: break-word;
   border-radius: 10px;
   font-size: 20px;
 }
