--- a/src/styles.css
+++ b/src/styles.css
@@ -33,6 +33,7 @@ h1 {
 
 .task-input {
   display: flex;
+  overflow: none;
   gap: 20px;
   margin-bottom: 30px;
   justify-content: center;
@@ -70,12 +71,13 @@ button:hover {
   background-color: #f9f9f9;
   border-radius: 10px;
   font-size: 20px;
+  overflow: auto;
   word-wrap: break-word; /* Ensure wrapping */
   overflow-wrap: break-word; /* Ensure wrapping */
   flex-wrap: wrap; /* Allow wrapping of text */
   width: 100%; /* Ensures it takes full width and wraps */
   white-space: normal; /* Ensures text wraps */
-  text-overflow: ellipsis; /* Adds ellipsis if text overflows */
+  text-overflow: e  llipsis; /* Adds ellipsis if text overflows */
 }
 
 .todo-item.completed {
@@ -132,6 +134,7 @@ input[type="text"].search-bar {
   border-radius: 5px;
   border: 1px solid #ddd;
   word-wrap: break-word; /* Ensure wrapping */
+  overflow: hidden;
   overflow-wrap: break-word; /* Ensure wrapping */
 }
 
